--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-axios": "^3.4.1",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
